fix emoji overlap on mobile

--- a/css/emoji-mart.css
+++ b/css/emoji-mart.css
@@ -7,6 +7,7 @@
 .emoji-mart {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
     font-size: 16px;
+    width: 100% !important;
     display: inline-block;
     color: #222427;
     border: 1px solid #d9d9d9;
