--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ html, body, input, button {
     div, span {
         font-size: 16px !important;
     }
+    .message-form {
+        padding-right: 15px !important;
+    }
+    .emoji-picker {
+        padding-left: 15px !important;
+    }
 }
 
 .help-block {
